[gd_scene load_steps=2 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 461.0
margin_top = 150.0
margin_right = 563.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 14.0
text = "Superposition"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 102.0
margin_bottom = 282.0
size_flags_vertical = 3
alignment = 1

[node name="HostGame" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 102.0
margin_bottom = 116.0
text = "Become a DM"

[node name="JoinGame" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 102.0
margin_bottom = 140.0
text = "Join a DM"

[node name="IpAddress" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 102.0
margin_bottom = 168.0
text = "localhost"
caret_blink = true

[node name="Version" type="Label" parent="VBoxContainer"]
margin_top = 286.0
margin_right = 102.0
margin_bottom = 300.0
text = "Version:"
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HostGame" to="." method="_on_HostGame_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinGame" to="." method="_on_JoinGame_pressed"]
